swagger edit for register and verify code
